--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ruoyi",
   "version": "3.8.5",
-  "description": "若依管理系统",
+  "description": "综合成绩评测系统",
   "author": "若依",
   "license": "MIT",
   "scripts": {
